force-app/main/default/objects/AAAP_Captcha_Settings__c/AAAP_Captcha_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>AAAP Captcha Settings</label>
</CustomObject>