force-app/main/default/objects/AAAP_Captcha_Settings__c/fields/Public_Key__c.field-meta.xml
<CustomField>
    <fullName>Public_Key__c</fullName>
    <label>Public Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>